resolvconf (1.58) unstable; urgency=low

  [ Thomas Hood ]
  * Update README
  * Update debconf template translation:
    * da.po thanks to Joe Dalton (Closes: #630241)
    * cs.po thanks to Miroslav Kure (Closes: #630669)
    * nl.po thanks to Jeroen Schot (Closes: #631499)
    * pt.po thanks to Pedro Ribeiro (Closes: #631569)

 -- Thomas Hood <jdthood@gmail.com>  Sat, 25 Jun 2011 15:00:00 +0200

resolvconf (1.57) unstable; urgency=low

  [ Marco Nenciarini ]
  * Update debconf template translations:
    * fr.po thanks to Christian Perrier (Closes: #629560)
  * Fix typo in prerm script

 -- Marco Nenciarini <mnencia@debian.org>  Wed, 08 Jun 2011 12:22:33 +0200

resolvconf (1.56) unstable; urgency=low

  [ Thomas Hood ]
  * Create /etc/resolvconf/run as a directory if no tmpfs is
    available into which it can symlink. (Closes: #629186)
  * Eliminate warning brought to light by piuparts:
    * Grep /etc/network/interfaces only if it exists
  * Run dpkg-trigger with --no-await
  * Update README
  * Update debconf template translations:
    * sv.po thanks to Martin Bagge (Closes: #629022)
    * ru.po thanks to Yuri Kozlov (Closes: #629165)
    * de.po thanks to Helge Kreutzmann (Closes: #629201)
    * eu.po thanks to Iñaki Larrañaga Murgoitio (Closes: #629411)

 -- Thomas Hood <jdthood@gmail.com>  Mon, 06 Jun 2011 15:00:00 +0200

resolvconf (1.55) unstable; urgency=medium

  [ Thomas Hood ]
  * Include old update.d/bind script for illustration purposes
    as /usr/share/doc/resolvconf/resolvconf-update-bind.
  * Use /usr/lib/resolvconf/dpkg-event.d instead of a /etc/...
    path for dpkg event hook scripts. The scripts don't need
    to be configuration files.
  * In postrm print a message and put up debconf note recommending
    reboot. (Closes: #628524)
  * Remove comments from /etc/resolv.conf on removal.
  * Remove /lib/init/rw/resolvconf on purge. (Closes: #628669)
  * Update debconf template translation: